5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4140/executions/1593_2426.log
== SUBMITION (2019-03-26 10:46:08) 
-- CODE:
var1=float(input());
var2=float(input());
#va1=var1*60;

distancia=va1*var2;
quantidade =distancia/12;

print(distancia)
print(quantidade)
-- EXECUTION TIME:
0.190558
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1593/2426/main.py", line 5, in <module>
    distancia=va1*var2;
NameError: name 'va1' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 10:46:11) 
-- CODE:
var1=float(input());
var2=float(input());
#va1=var1*60;

distancia=va1*var2;
quantidade =distancia/12;

print(distancia)
print(quantidade)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    distancia=va1*var2;
NameError: name 'va1' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 10:46:37) 
-- CODE:
var1=float(input());
var2=float(input());
#va1=var1*60;

distancia=var1*var2;
quantidade =distancia/12;

print(distancia)
print(quantidade)
-- OUTPUT:
900.0
75.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 10:46:50) 
-- CODE:
var1=float(input());
var2=float(input());
#va1=var1*60;

distancia=var1*var2;
quantidade =distancia/12;

print(distancia)
print(quantidade)
-- EXECUTION TIME:
0.122697
-- TEST CASE 1:
---- input:
9
100
---- correct output:
900.0
75.0
---- user output:
900.0
75.0
-- TEST CASE 2:
---- input:
5
120

---- correct output:
600.0
50.0

---- user output:
600.0
50.0
-- TEST CASE 3:
---- input:
1.2
80
---- correct output:
96.0
8.0

---- user output:
96.0
8.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
